overlayview: fixed wrong layout on IE7
git-svn-id: https://trac-hacks.org/svn@11626 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/overlayviewplugin/0.12/tracoverlayview/htdocs/base.css
+++ b/overlayviewplugin/0.12/tracoverlayview/htdocs/base.css
@@ -2,10 +2,15 @@
  a.overlayview-rawlink {
   background: url('../common/download.png') right center no-repeat;
   padding-right: 16px;
+  background: url('../common/download.png') center center no-repeat;
+  padding-right: 18px;
   border-bottom: none;
  }
 }
 
+#cboxTopCenter {
+ display: none;
+}
 #cboxBottomLeft, #cboxMiddleLeft {
  clear: left;
 }
